[metadata]
name = noop_timer
description = A package for calculating the time it takes to execute NOP bytecode operations
author = Paul Ganssje
author_email = paul@ganssle.io
url = https://github.com/pganssle/noop_timer
long_description: FILE: README.md
long_description_content_type: text/markdown
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries


[options]
py_modules=
    noop_timer
python_requires = >= 3.6
install_requires=
    progressbar2
    matplotlib
    numpy
    codetransformer
    py-cpuinfo
